objects/Carriage__c.object
<CustomObject>
    <fields>
        <fullName>Affiliate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Affiliate</label>
        <referenceTo>Programs__c</referenceTo>
        <relationshipLabel>Carriages</relationshipLabel>
        <relationshipName>Carriages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Carrier_Systems__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Carrier Systems</label>
        <referenceTo>Carrier_Systems__c</referenceTo>
        <relationshipLabel>Carriages</relationshipLabel>
        <relationshipName>Carriages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Launch_Date__c</fullName>
        <label>Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Off_Air_Date__c</fullName>
        <label>Off Air Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Station__c</fullName>
        <label>Station</label>
        <referenceTo>Station__c</referenceTo>
        <relationshipLabel>Carriages</relationshipLabel>
        <relationshipName>Carriages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Carriage</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>C-{00000}</displayFormat>
        <label>Carriage Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Carriages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>